k8s/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-container
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web-container
  replicas: 1
  template:
    metadata:
      labels:
        app: web-container
    spec:
      containers:
        - name: web-container
          image: mirage2032/z80emu:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
