k8s/web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-container
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
