k8s/web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z80emu-ingress
  annotations:
    networking.gke.io/managed-certificates: z80emu-cert
spec:
  rules:
    - host: z80emu.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
